ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: MYingress
  namespace: test
spec:
  rules:
  - host: kuber
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-web
            port:
              number: 80
---
